fixed the offcenter icons on about page.

--- a/public/stylesheets/katie.css
+++ b/public/stylesheets/katie.css
@@ -83,7 +83,6 @@ html, body {
 
 /* Footer */
 
-<<<<<<< HEAD
 footer {
   position: absolute;
   bottom: 0;
@@ -98,9 +97,8 @@ footer {
   display: block;
   bottom: 0;
 }
-=======
 
->>>>>>> 021007726c3184b5fb9c1beb232572a4c3488fc7
+/*Steven Style*/
 
 #icons {
   width: 70%;
@@ -187,3 +185,12 @@ footer {
    background-size: cover;
 }
 
+#iconContainer {
+  height: 20%;
+}
+
+#spaceHolder {
+  height: 5%;
+  width: 100%;
+  clear: both;
+}
